<resources>
    <string name="app_name">凌海交通</string>
    <string name="pass">密&#12288;码</string>
    <string name="member_login">用户登录</string>
    <string name="member_name">用户名</string>
    <string name="login">登录</string>
    <string name="home_page">首页</string>
    <string name="platform">平台</string>
    <string name="on_site_consulting">On-Site Consulting</string>
    <string name="press_release">Press Release</string>
    <string name="search">搜索</string>
    <string name="deal">处理</string>
    <string name="road_report">路况报告</string>
    <string name="road_manager">路&#12288;&#12288;长:</string>
    <string name="xunluyuan">巡&#8194;路&#8194;员:</string>
    <string name="yanghuyuan">养&#8194;护&#8194;员:</string>

</resources>
